# lascheck

./: .gitattributes  LICENSE  License  README.md  pyproject.toml  setup.py
lascheck/: __init__.py  defaults.py  las.py  las_items.py  reader.py  spec.py
tests/: missing_ascii_section.las  missing_curves_section.las  missing_null.las  missing_vers.las  missing_version_section.las  missing_well_section.las  missing_wrap.las  test_conformity.py
tests/examples/: blank_line_in_ascii_section.las  blank_line_in_curve_section.las  blank_line_in_other_section.las  blank_line_in_parameter_section.las  blank_line_in_two_sections.las  blank_line_in_version_section.las  blank_line_in_well_section.las  invalid_depth_unit.las  invalid_depth_unit_mismatch.las  missing_a_section.las  missing_well_curves_ascii_section.las  missing_well_srvc.las  missing_well_step.las  missing_well_stop.las  missing_well_strt.las  missing_well_uwi.las  sample.las  sample2.las  sample3.las  sample4_timebaseddata.las  sample5_indexbaseddata.las  sample_duplicate_sections.las  sample_invalid_start_step.las  sample_invalid_step.las  sample_invalid_stop_step.las  sample_sections_after_a_section.las  sample_sections_after_a_section_2.las  sample_sections_before_a_section.las
