[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lascheck"
version = "0.1.5"
authors = [
  { name="Mandar J Kulkarni.", email="mjkool@gmail.com" },
]
description = "Checking conformity of Log ASCII Standard (LAS) files to LAS 2.0 standard"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
     "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords=["las", "geophysics", "version"]
license = {text = "MIT License"}

[project.urls]
Homepage = "https://github.com/MandarJKulkarni/lascheck"
Issues = "https://github.com/MandarJKulkarni/lascheck/issues"